rusty-cdk-macros/tests/fails/string_for_secret_invalid_chars.stderr
error: value should only contain alphanumeric characters and ['/', '_', '+', '=', '.', '@', '-']
 --> tests/fails/string_for_secret_invalid_chars.rs:5:24
  |
5 |     string_for_secret!("invalid char ^");
  |                        ^^^^^^^^^^^^^^^^
